# Audio-Vectoring

./: .gitignore  INSTALL.md  README.md  STRUCTURE.md  SUMMARY.md  clap.py  commands.md  compare_search.py  pyproject.toml  qdrant_setup.py  save_chunks.py  setup_env.sh  whisper.py
audio_vectoring/: __init__.py
audio_vectoring/chunking/: __init__.py  audio_chunking.py  text_chunking.py
audio_vectoring/embeddings/: __init__.py  clap_embedding.py
audio_vectoring/processors/: __init__.py  base.py  clap_processor.py  wav2vec_processor.py  whisper_processor.py
audio_vectoring/storage/: __init__.py  qdrant_connector.py
audio_vectoring/utils/: __init__.py  audio_utils.py
chunk_results/: comparison_summary.md
chunk_results/clap_audio/: clap_audio_result_1_chunk_4_metadata.json  clap_audio_result_1_chunk_541_metadata.json  clap_audio_result_2_chunk_2_metadata.json  clap_audio_result_2_chunk_544_metadata.json
chunk_results/clap_text/: clap_text_result_1_chunk_2_metadata.json  clap_text_result_1_chunk_351_metadata.json  clap_text_result_2_chunk_121_metadata.json  clap_text_result_2_chunk_1_metadata.json
chunk_results/wav2vec/: wav2vec_result_1_chunk_2_metadata.json  wav2vec_result_2_chunk_1_metadata.json  wav2vec_result_2_chunk_604_metadata.json
chunk_results/whisper/: chunk_0_metadata.json  processing_info.json  result_1.txt  test_audio.wav_transcript.txt
chunks/: summary.json
chunks/clap/: summary.csv
chunks/wav2vec/: summary.csv
chunks/whisper/: summary.csv
chunks/whisper/fallback/: chunk_1.txt  chunk_10.txt  chunk_100.txt  chunk_100_metadata.json  chunk_101.txt  chunk_101_metadata.json  chunk_102.txt  chunk_102_metadata.json  chunk_103.txt  chunk_103_metadata.json  chunk_105_metadata.json  chunk_106.txt  chunk_12.txt  (+127 more)
examples/: basic_usage.py
legacy/: clap.py  compare_and_save.py  compare_search.py  qdrant_setup.py  test_qdrant.py  true_multimodal_rag.py  update_qdrant.py  wave2vec.py  whisper.py
scripts/: compare_search.py  run_tests.sh
tests/: __init__.py  test_imports.py
(+116 files in other folders)
