[project]
name = "audio-vectoring"
version = "0.1.0"
description = "Audio Vectoring and Search with multiple approaches"
authors = [
    {name = "Anugrah anugrah@giantanalytics.ai"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy (>=2.1.0,<3.0.0)",
    "qdrant-client (>=1.14.2,<2.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "fastembed (>=0.7.0,<0.8.0)",
    "jiwer (>=3.1.0,<4.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
